<resources>
    <string name="app_name">Findly</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_link"><u>Sign up</u></string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in_link"><u>Sign in</u></string>
    <string name="login">Login.</string>
    <string name="log_out">Log out</string>
    <string name="email">Email</string>
    <string name="error"></string>
    <string name="password">Password</string>
    <string name="forgot_password"><u>Forgot Password</u></string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register">Register.</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="reset_password">Reset \nPassword.</string>
    <string name="recover">Recover</string>
    <string name="new_password">New Password</string>
    <string name="next">Next</string>
    <string name="watchlist">Watchlist.</string>
    <string name="change_password">Change Password</string>
    <string name="change_password_title">Change Password.</string>
    <string name="current_password">Current Password</string>
    <string name="settings">Settings.</string>
    <string name="account_settings">Account Settings</string>
    <string name="change_display_name">Change display name</string>
    <string name="change_display_name_title">Change Display Name.</string>
    <string name="streaming_services">Streaming Services</string>
    <string name="netflix">Netflix</string>
    <string name="hbo">HBO</string>
    <string name="hulu">Hulu</string>
    <string name="disney">Disney+</string>
    <string name="amazon_prime">Amazon Prime</string>
    <string name="most_popular_movies">Most Popular Movies</string>
    <string name="most_popular_tv_shows">Most popular Tv Shows</string>
    <string name="edit">edit</string>
    <string name="choose_from_gallery">Choose from gallery</string>
    <string name="take_picture">Take Picture</string>
    <string name="cancel">Cancel</string>
    <string name="new_display_name">New display name</string>
    <string name="confirm">Confirm</string>
    <string name="delete_account">Delete account</string>
    <string name="movies">Movies.</string>
    <string name="tv_shows">Tv Shows.</string>
    <string name="save">Save</string>
    <string name="edit_watchlist">Edit Watchlist.</string>
    <string name="search">Search for movies or tv shows</string>
    <string name="movies_question">What category of movies do you like the most?</string>
    <string name="tv_shows_question">What category of tv shows do you like the most?</string>
    <string name="title_activity_search">search</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="search_movies">   Search for movies</string>
    <string name="search_series">   Search for tv shows</string>
    <string name="overview">Overview</string>
    <string name="status">Status</string>
    <string name="seasons">Seasons</string>
    <string name="networks">Networks</string>
    <string name="delete_movie">Delete Movie</string>
    <string name="delete_tv_show">Delete Tv Show</string>
</resources>
