<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    android:background="#191520"
    tools:context=".Activities.Login">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:textColor="@color/white"
        android:textSize="36dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/login" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_marginVertical="12dp"
        android:textColor="#F33939"
        android:text=""
        android:textSize="16dp"
        android:id="@+id/error"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textColor="@color/white"
        android:layout_below="@id/error"
        android:id="@+id/tvEmail"
        />

    <EditText
        android:id="@+id/email"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:layout_below="@id/tvEmail"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/white"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:fontFamily="@font/roboto_regular"
        android:inputType="textEmailAddress" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textColor="@color/white"
        android:layout_below="@id/email"
        android:id="@+id/tvPassword"
        />

    <EditText
        android:id="@+id/password"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:layout_below="@id/tvPassword"
        android:backgroundTint="@color/white"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:fontFamily="@font/roboto_regular"
        android:ems="10"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/sign_in"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/sign_up"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:text="@string/sign_in"
        android:background="@drawable/btn_rounded"
        android:onClick="signInWithEmailAndPassword" />

    <Button
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/password"
        android:layout_marginTop="50dp"
        android:textColor="@color/white"
        android:text="@string/forgot_password"
        android:textSize="16sp"
        style="?android:attr/borderlessButtonStyle"
        android:textAllCaps="false"
        android:onClick="resetPassword"/>

    <Button
        android:id="@+id/sign_up"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/forgot_password"
        android:layout_marginLeft="-10dp"
        android:layout_marginTop="-12dp"
        android:layout_toRightOf="@id/textView"
        android:text="@string/sign_up_link"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:onClick="signUp"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_below="@id/forgot_password"
        android:layout_marginStart="45dp"
        android:text="@string/don_t_have_an_account"
        android:textSize="16sp"
        android:fontFamily="@font/roboto_regular" />


</RelativeLayout>