<?xml version="1.0" encoding="utf-8"?><ScrollView    xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:app="http://schemas.android.com/apk/res-auto"    xmlns:tools="http://schemas.android.com/tools"    android:layout_width="match_parent"    android:layout_height="match_parent"    android:padding="30dp"    android:background="#191520"    tools:context=".Activities.Register">    <RelativeLayout        android:layout_width="match_parent"        android:layout_height="match_parent">    <TextView        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:layout_marginTop="40dp"        android:text="@string/register"        android:textColor="@color/white"        android:textSize="36dp"        android:fontFamily="@font/roboto_bold"        android:id="@+id/title"/>    <TextView        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:layout_below="@id/title"        android:layout_marginVertical="12dp"        android:textColor="#F33939"        android:text=""        android:textSize="16dp"        android:id="@+id/error"/>    <TextView        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:text="@string/first_name"        android:textColor="@color/white"        android:layout_below="@id/error"        android:id="@+id/tvFirstName"        android:textSize="16sp"        />    <EditText        android:id="@+id/firstName"        android:layout_width="152dp"        android:layout_height="50dp"        android:layout_below="@+id/tvFirstName"        android:backgroundTint="@color/white"        android:textColor="@color/white"        android:textSize="16sp"        android:fontFamily="@font/roboto_regular"        />    <TextView        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:text="@string/last_name"        android:layout_toRightOf="@id/tvFirstName"        android:layout_marginLeft="112dp"        android:textColor="@color/white"        android:layout_below="@id/error"        android:id="@+id/tvLastName"        android:textSize="16sp"        />    <EditText        android:id="@+id/lastName"        android:layout_width="152dp"        android:layout_height="50dp"        android:layout_marginLeft="30dp"        android:layout_toRightOf="@id/firstName"        android:layout_below="@id/tvLastName"        android:backgroundTint="@color/white"        android:textColor="@color/white"        android:textSize="16sp"        android:fontFamily="@font/roboto_regular"/>    <TextView        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:text="@string/email"        android:layout_below="@id/firstName"        android:textColor="@color/white"        android:id="@+id/tvEmail"        android:textSize="16sp"        android:layout_marginTop="30dp"        />    <EditText        android:id="@+id/email"        android:layout_width="match_parent"        android:layout_height="50dp"        android:layout_below="@+id/tvEmail"        android:backgroundTint="@color/white"        android:textColor="@color/white"        android:inputType="textEmailAddress"        android:textSize="16sp"        android:fontFamily="@font/roboto_regular" />    <TextView        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:text="@string/password"        android:layout_below="@id/email"        android:textColor="@color/white"        android:id="@+id/tvPassword"        android:textSize="16sp"        android:layout_marginTop="30dp"        />    <EditText        android:id="@+id/password"        android:layout_width="match_parent"        android:layout_height="50dp"        android:layout_below="@id/tvPassword"        android:backgroundTint="@color/white"        android:inputType="textPassword"        android:textColor="@color/white"        android:textSize="16sp"        android:fontFamily="@font/roboto_regular" />    <TextView        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:text="@string/confirm_password"        android:layout_below="@id/password"        android:textColor="@color/white"        android:id="@+id/tvConfirmPassword"        android:textSize="16sp"        android:layout_marginTop="30dp"        />    <EditText        android:id="@+id/confirmPassword"        android:layout_width="match_parent"        android:layout_height="50dp"        android:layout_below="@id/tvConfirmPassword"        android:backgroundTint="@color/white"        android:inputType="textPassword"        android:textColor="@color/white"        android:textSize="16sp"        android:fontFamily="@font/roboto_regular" />    <Button        android:id="@+id/button"        android:layout_width="200dp"        android:layout_height="40dp"        android:layout_marginHorizontal="100dp"        android:layout_below="@id/text"        android:layout_marginTop="30dp"        android:text="@string/sign_up"        android:textColor="@color/white"        android:textSize="18sp"        android:background="@drawable/btn_rounded"        android:fontFamily="@font/roboto_bold"        android:onClick="registerUser"/>    <TextView        android:id="@+id/text"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:layout_marginTop="30dp"        android:layout_below="@id/confirmPassword"        android:layout_marginStart="35dp"        android:text="@string/already_have_an_account"        android:textColor="@color/white"        android:textSize="16sp"        android:fontFamily="@font/roboto_regular" />    <Button        android:id="@+id/sign_in"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:layout_toRightOf="@id/text"        android:layout_below="@id/confirmPassword"        android:layout_marginTop="18dp"        android:layout_marginLeft="-10dp"        android:text="@string/sign_in_link"        android:textColor="@color/white"        android:textSize="16sp"        style="?android:attr/borderlessButtonStyle"        android:textAllCaps="false"/>    </RelativeLayout></ScrollView>