<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#191520"
    tools:context=".Activities.ChangePassword2">


    <ImageView
        android:id="@+id/goBack"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_margin="36dp"
        android:onClick="navigateBack"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_below="@id/goBack"
        android:text="@string/change_password"
        android:textColor="@color/white"
        android:textSize="42dp"
        android:fontFamily="@font/roboto_bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_below="@id/title"
        android:layout_marginVertical="12dp"
        android:textColor="#F33939"
        android:text=""
        android:textSize="16dp"
        android:id="@+id/error"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_password"
        android:layout_marginHorizontal="40dp"
        android:layout_below="@id/error"
        android:textColor="@color/white"
        android:id="@+id/tvPassword"
        android:textSize="16sp"
        android:layout_marginTop="30dp"
        />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="40dp"
        android:layout_height="50dp"
        android:layout_below="@id/tvPassword"
        android:backgroundTint="@color/white"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:fontFamily="@font/roboto_regular" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_password"
        android:layout_marginHorizontal="40dp"
        android:layout_below="@id/password"
        android:textColor="@color/white"
        android:id="@+id/tvConfirmPassword"
        android:textSize="16sp"
        android:layout_marginTop="30dp"
        />

    <EditText
        android:id="@+id/confirmPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="40dp"
        android:layout_below="@id/tvConfirmPassword"
        android:backgroundTint="@color/white"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:fontFamily="@font/roboto_regular" />

    <Button
        android:id="@+id/button"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_below="@id/confirmPassword"
        android:layout_marginTop="64dp"
        android:layout_centerHorizontal="true"
        android:text="@string/confirm"
        android:textColor="#F7FFE2"
        android:textSize="18sp"
        android:background="@drawable/btn_rounded"
        android:onClick="setPassword"/>

</RelativeLayout>