<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:scrollbarSize="0dp"
    android:background="#191520"
    tools:context=".Activities.SeriesDetails">

    <RelativeLayout
        android:visibility="gone"
        android:id="@+id/info"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="24dp"
        android:paddingBottom="50dp">

        <ImageView
            android:id="@+id/goBack"
            android:layout_width="16dp"
            android:layout_height="24dp"
            android:background="@drawable/back"
            android:onClick="NavigateBack" />

        <ImageView
            android:layout_marginHorizontal="16dp"
            android:id="@+id/bookmark"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentEnd="true"
            android:src="@drawable/bookmark_outlined"/>

        <ImageView
            android:layout_marginHorizontal="16dp"
            android:id="@+id/share"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/share"
            android:layout_toLeftOf="@id/bookmark"/>


        <ImageView
            android:id="@+id/image"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"
            android:layout_below="@id/goBack"
            android:layout_marginVertical="24dp"
            android:layout_centerHorizontal="true"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/movie_title"
            android:layout_marginRight="24dp"
            android:layout_below="@id/image"
            android:textColor="@color/red"
            android:textSize="24sp"
            android:fontFamily="@font/roboto_bold"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/release_date"
            android:layout_below="@id/movie_title"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:fontFamily="@font/roboto_regular"/>

        <ImageView
            android:id="@+id/star"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:src="@drawable/star"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="4dp"
            android:layout_toRightOf="@id/release_date"
            android:layout_below="@id/movie_title"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rating"
            android:layout_below="@id/movie_title"
            android:layout_toRightOf="@id/star"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:fontFamily="@font/roboto_regular"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvOverview"
            android:text="@string/overview"
            android:layout_below="@id/release_date"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_marginVertical="20dp"
            android:fontFamily="@font/roboto_bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/description"
            android:layout_below="@id/tvOverview"
            android:autoSizeTextType="uniform"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:fontFamily="@font/roboto_regular"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvNetworks"
            android:text="@string/networks"
            android:layout_below="@id/description"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_marginVertical="20dp"
            android:fontFamily="@font/roboto_bold"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvStatus"
            android:text="@string/status"
            android:layout_below="@id/tvNetworks"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_marginVertical="20dp"
            android:fontFamily="@font/roboto_bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/status"
            android:layout_below="@id/tvStatus"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:fontFamily="@font/roboto_regular"/>

    </RelativeLayout>
</ScrollView>